# glowing-journey

project-athena-server/: Cargo.toml
project-athena-server-go/: go.mod  main.go
project-athena-server/db/docker/: docker-compose.yaml
project-athena-server/db/migrations/: 1_setup.sql  2_user.sql
project-athena-server/src/: error.rs  main.rs  model.rs
project-athena-server/src/web/: middleware_auth.rs  mod.rs  routes_login.rs  routes_ticket.rs
