[package]
name = "project-athena-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
rustls = "0.23.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.89"
